resources/assets/sass/_animals.scss
@font-face {
  font-family: 'Marker Felt';
  src: url('/fonts/MarkerFelt-Wide.woff2') format('woff2'),
  url('/fonts/MarkerFelt-Wide.woff') format('woff');
  font-weight: bold;
  font-style: normal;
}


.pets-list-header {
  font-size: 1.4rem;
  font-weight: 600;
  letter-spacing: 1px;
  margin: 0 1rem;
}
.pets-list-item {
  display: flex;
  padding: 3rem;
  border-bottom: 1px solid #ddd;
  position: relative;
  .pet-photo {
    flex-shrink: 0;
    width: 160px;
    height: 160px;
    overflow: hidden;
    border-radius: 1rem;
    background-color: #ddd;
    display: flex;
    justify-content: center;
    align-items: center;
    background-position: center;
    background-size: cover;
  }
  .pet-info {
    padding: 0 4rem;
    display: flex;
    flex-flow: row wrap;
    width: 100%;
  }
  .more-button {
    position: absolute;
    right: 2.8rem;
    font-size: 2rem;
    line-height: 2.8rem;
    text-align: center;
    color: #888;
    cursor: pointer;
    .more-icon {
      width: 1.3rem;
      height: 2.6rem;
      background-image: url('/img/icon/more.svg');
      background-repeat: no-repeat;
      background-position: center;
    }
    .dropdown-item {
      font-size: 1rem;
      font-weight: 500;
      &.active, &:active {
        color: #fff;
        text-decoration: none;
        background-color: #0b4478;
      }
    }
  }
}

.pet-info-block {
  display: flex;
  flex-flow: column;
  justify-content: center;
  width: 50%;
  padding-right: 2rem;
  .title {
    font-size: 1.3rem;
    font-weight: bold;
    color: #999;
  }
  .content {
    padding: 0;
    font-size: 1.4rem;
    font-weight: 500;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    &.green {
      color: #417505;
    }
    &.red {
      color: #d0021b;
    }
  }
}
.required-field {
  color: red;
}
.new-pet-photos label.photo-item.filled {
  position: relative;
  &:before {
    content: 'X';
    font-size: 2rem;
    line-height: 2rem;
    position: absolute;
    top: 0;
    right: 0;
    color: red;
    font-weight: bold;
  }
}
.buttons {
  width: 300px;
  .line {
    text-align: center;
    padding: 10px 0;
    position: relative;
    span {
      display: inline-block;
      font-style: italic;
      position: absolute;
      top: 9px;
      background-color: #fff;
      font-size: 1.3rem;
      left: 135px;
    }
  }
  .btn-grey {
    font-size: 1.2rem;
    letter-spacing: inherit;
    display: inline-block;
    background: #ddd;
    padding: 10px 25px;
    &:hover {
      color: #777777;
    }
  }
}
.modal-md {
  max-width: 600px;
}
.modal {
  .btn {
    display: block;
  }
  &-header {
    border-bottom: none;
    padding-bottom: 0;
    button {
      font-size: 2.3rem;
      line-height: 2rem;
    }
  }
  &-body {
    padding: 0 42px 42px 42px;
    h2 {
      font-size: 36px;
      font-weight: bold;
      font-style: normal;
      font-stretch: normal;
      line-height: normal;
      letter-spacing: 1.2px;
      text-align: center;
      color: #333333;
      margin-bottom: 35px;
    }
    p {
      color: #777;
      font-size: 1rem;
    }
    .col-sm-6 + .col-sm-6 {
      padding-left: 40px;
      padding-top: 10px
    }
    .col-md-6 {
      text-align: left;
    }
    p.grey {
      font-size: 18px;
      font-weight: bold;
      color: #999999;
    }
    p.black {
      font-size: 20px;
      font-weight: 500;
      color: #333333;
      margin-bottom: 25px;
    }
    p.not-found {
      font-size: 14px;
      line-height: 1.57;
      text-align: center;
      color: #999999;
    }
    p.not-found > span {
      font-weight: 600;
      font-style: italic;
    }
    .mt-6 {
      margin-top: 70px;
    }
    .not-found-search {
      width: 300px;
      margin: 70px auto 0;
    }
    .invisible-input {
      border-top: none;
      border-left: none;
      border-right: none;
      border-bottom: 1px solid #ccc;
      box-shadow: none;
      outline: none;
      font-size: 1.2rem;
    }
  }
}
//preloader
$green: #008744;
$blue: #0057e7;
$red: #d62d20;
$yellow: #ffa700;
$white: #eee;

// scaling... any units
$width: 100px;
.showbox {
  height: 40vh;
  display: flex;
  align-items: center;

  .loader {
    position: relative;
    margin: 0 auto;
    width: $width;
    &:before {
      content: '';
      display: block;
      padding-top: 100%;
    }
  }

  .circular {
    animation: rotate 2s linear infinite;
    height: 100%;
    transform-origin: center center;
    width: 100%;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    margin: auto;
  }

  .path {
    stroke-dasharray: 1, 200;
    stroke-dashoffset: 0;
    animation: dash 1.5s ease-in-out infinite, color 6s ease-in-out infinite;
    stroke-linecap: round;
  }
}
@keyframes rotate {
  100% {
    transform: rotate(360deg);
  }
}

@keyframes dash {
  0% {
    stroke-dasharray: 1, 200;
    stroke-dashoffset: 0;
  }
  50% {
    stroke-dasharray: 89, 200;
    stroke-dashoffset: -35px;
  }
  100% {
    stroke-dasharray: 89, 200;
    stroke-dashoffset: -124px;
  }
}

@keyframes color {
  100%,
  0% {
    stroke: $red;
  }
  40% {
    stroke: $blue;
  }
  66% {
    stroke: $green;
  }
  80%,
  90% {
    stroke: $yellow;
  }
}

//end preloader

@media (max-width: 900px) {
  .pets-list-item {
    padding: 3vw 0 3vw 3vw;
    .pet-info {
      padding: 0 4vw;
    }
  }
}
@media (max-width: 650px) {
  .pets-list-item {
    padding: 2rem 1rem 1.5rem;
    .pet-photo {
      width: 120px;
      height: 120px;
    }
    .pet-info {
      padding: 0 0 0 2rem;
    }
    .more-button {
      right: -1rem;
      padding: 0 2rem;
      .dropdown-item {
        font-size: 1.2rem;
      }
    }
  }
  .pet-info-block {
    width: 50%;
    padding-right: 1rem;
    margin-bottom: 1rem;
  }
}
@media (max-width: 510px) {
  .pet-info-block {
    width: 100%;
  }
}

.add-new-pet-wrap {
  display: flex;
  align-items: center;
  flex-flow: column;
  padding: 2rem 0 2rem;
  .above-text {
    font-size: 1.4rem;
    letter-spacing: 0.7px;
    margin: 2.5rem 0 2.5rem;
  }
}


.no-pets-container {
  display: flex;
  align-items: center;
  flex-flow: column;
  font-size: 1.4rem;
  text-align: center;
  .title {
    font-size: 2.5rem;
    font-weight: bold;
    margin: 2rem 0 0.5rem;
  }
  .gray {
    color: #999;
  }
  img {
    max-width: 55%;
  }
}
@media (max-width: 650px) {
  .no-pets-container {
    img {
      max-width: 90%;
    }
    .title {
      font-size: 2.2rem;
      text-align: center;
    }
  }
}

.new-pet-photos {
  label.photo-item {
    float: left;
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0 0.5rem 1rem;
    width: 7.5rem;
    height: 7.5rem;
    border: 2px dashed #999;
    border-radius: 1rem;
    background-position: center;
    background-size: cover;
    cursor: pointer;
    &.filled .add-btn {
      display: none;
    }
    > input {
      display: none;
    }
    &.photo-item-main {
      width: 16rem;
      height: 16rem;
      background-color: #ecf5f6;
      flex-shrink: 0;
      margin: 0 0.5rem 0;
      .add-btn {
        width: 4.2rem;
        height: 4.2rem;
      }
    }
    .add-btn {
      font-size: 2.8rem;
      line-height: 2.1rem;
      font-weight: 100;
      width: 2.1rem;
      height: 2.1rem;
      background-image: url(/img/icon/add.svg);
      background-size: 100%;
      background-repeat: no-repeat;
    }
  }
}
@media (max-width: 650px) {
  .new-pet-photos {
    margin: 0 -1rem;
    label.photo-item {
      width: 6rem;
      height: 6rem;
      margin: 0.9rem 0.8rem;
      &.photo-item-main {
        width: 13.7rem;
        height: 13.7rem;
        margin: 0.9rem 0.8rem 0;
      }
    }
  }
}

.pet-photo-hint {
  position: absolute;
  background-image: url('/img/icon/arrow.svg');
  background-position: 100% 0;
  background-repeat: no-repeat;
  width: 192px;
  height: 88px;
  top: 12rem;
  left: 6rem;
  display: flex;
  align-items: flex-end;
  font-family: 'Marker Felt';
  font-size: 1.3rem;
  line-height: normal;
  color: #b4d6db;
  div {
    text-align: center;
    width: 79%;
  }
}

.animal-show {
  padding: 0 2.8rem 7rem;
  .animal-images {
    width: 100%;
    overflow: hidden;
    max-width: 60rem;
    .animal-image {
      float: left;
      width: 110px;
      height: 110px;
      background-position: center;
      background-size: cover;
      border-radius: 12px;
      margin: 0.8rem 0.9rem;
      &.main {
        width: 240px;
        height: 240px;
        flex-shrink: 0;
        margin: 0.7rem 1.1rem 0;
      }
    }
  }
  .pet-info {
    padding-top: 2rem;
    display: flex;
    flex-flow: row wrap;
  }
  .pet-info-block {
    width: 32%;
    margin-top: 1.5rem;
    padding-right: 2rem;
    justify-content: flex-start;
    .content {
      white-space: normal;
    }
    &.comment {
      width: 76%;
      .content {
        line-height: 1.4;
      }
      .title {
        margin-bottom: 0.6rem;
      }
    }
  }
  .animal-options {
    margin: 2rem 0;
    display: flex;
    flex-flow: row wrap;
    .animal-option-item {
      width: 15.7rem;
      color: #333;
      font-size: 1.3rem;
      font-weight: 500;
      padding: 1rem 1.4rem;
      background-color: #f1f1f1;
      background-image: url('/img/icon/check.svg');
      background-position: 8% 50%;
      background-repeat: no-repeat;
      padding-left: 3.4rem;
      letter-spacing: 0.7px;
      border-radius: 0.9rem;
      margin: 1rem 2rem 1rem 0;
    }
  }
  hr.divider {
    margin: 3rem -2.8rem;
    border-top: 1px solid #ddd;
  }
  .files-container-title {
    font-size: 1.4rem;
    font-weight: 600;
    letter-spacing: 1px;
    margin-bottom: 1.7rem;
  }
  .files-list {
    display: flex;
    flex-flow: column;
    .file-item {
      padding: 1rem 1.4rem;
      height: 4.3rem;
      width: 40rem;
      border: 1px solid #ddd;
      border-radius: 0.6rem;
      font-size: 1.4rem;
      font-weight: 500;
      overflow: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;
      color: #333;
      margin-bottom: 1.2rem;
      display: flex;
      .file-ext {
        color: #999;
      }
    }
    .no-files {
      font-size: 1rem;
    }
  }
}
@media (max-width: 650px) {
  .animal-show {
    padding: 0 1rem 2rem;
    margin-top: -1.5rem;
    .animal-images {
      width: auto;
      margin: 0 -1rem;
      .animal-image {
        width: 65px;
        height: 65px;
        margin: 0.8rem 1rem;
        &.main {
          width: 150px;
          height: 150px;
          margin: 0.7rem 1.1rem 0;
        }
      }
    }
    .pet-info-block {
      width: 50%;
      &.comment {
        width: 100%;
      }
    }
    .animal-options {
      margin: 0;
    }
  }
}
@media (max-width: 500px) {
  .animal-show .files-list .file-item {
    width: 100%;
  }
}

.success-page {
  margin-top: -1.5rem;
  padding: 0 11rem;
  display: flex;
  flex-flow: column;
  align-items: center;
  .success-icon {
    width: 16.3rem;
    height: 16.3rem;
    background-image: url('/img/icon/ok.svg');
    background-size: contain;
    background-repeat: no-repeat;
  }
  .success-title {
    font-size: 2.5rem;
    font-weight: bold;
    letter-spacing: 1.2px;
    margin: 3rem 0 3rem;
    text-align: center;
  }
  .success-message {
    font-size: 1.4rem;
    p {
      margin-bottom: 2rem;
    }
  }
}
@media (max-width: 1100px) {
  .success-page {
    padding: 0 10%;
  }
}
@media (max-width: 650px) {
  .success-page {
    padding: 3rem 0 1rem;
    .success-icon {
      width: 12.4rem;
      height: 12.4rem;
    }
    .success-title {
      font-size: 2.1rem;
    }
  }
}

